Fix header line height spacing

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -51,18 +51,21 @@ section.entry {
 h1 {
   font-weight: bold;
   font-size: 3em;
+  line-height: 1.2em;
   margin: 0 auto 3rem;
 }
 
 h2 {
   font-weight: bold;
   font-size: 2.5em;
+  line-height: 1.2em;
   margin: 0 auto 3rem;
 }
 
 h3 {
   font-weight: bold;
   font-size: 1.5em;
+  line-height: 1.2em;
   margin: 0 auto 0;
 }
 
